--- a/404.html
+++ b/404.html
@@ -193,31 +193,23 @@
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
-                            <i class="fa fa-bars"></i>
+                            <img src="images/menu-2.svg" alt="Search" style="filter: invert(1);">
                         </label>
-<!--                        <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">-->
-<!--                            <i class="fa fa-paint-brush"></i>-->
-<!--                        </button>-->
-<!--                        <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">-->
-<!--                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>-->
-<!--                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>-->
-<!--                            <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>-->
-<!--                            <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>-->
-<!--                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>-->
-<!--                        </ul>-->
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
-                            <i class="fa fa-search"></i>
+                            <img src="images/search.svg" alt="Search" style="filter: invert(1);">
                         </button>
                     </div>
 
-                    <h1 class="menu-title">This Month in Reactive Graph</h1>
+                    <h1 class="menu-title">
+                        This Month in Reactive Graph
+                    </h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
-                            <i id="print-button" class="fa fa-print"></i>
+                        <a href="https://www.reactive-graph.io/" title="www.reactive-graph.io" aria-label="www.reactive-graph.io">
+                            <img src="design/public/logo/circle/reactive-graph-circle-white.svg" alt="www.reactive-graph.io" class="right-buttons-logo">
                         </a>
                         <a href="https://github.com/reactive-graph/this-month-in-reactive-graph" title="Git repository" aria-label="Git repository">
-                            <i id="git-repository-button" class="fa fa-github"></i>
+                            <img src="images/brand-github.svg" alt="Search" style="filter: invert(1);">
                         </a>
 
                     </div>
